# DesignAI

./: .gitignore  README.md  TODO.md  example-auto-fill-api-result.json  next.config.ts  package-lock.json  package.json  performance-test-guide.md
backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  app-config.yaml  catalog_session.json  create_db.sql  docker-compose.yml  openapi.json  pyproject.toml  requirements-api.txt  requirements.txt  result.json  result3.json  result_visual.html  result_visual3.html  run_case_backend_cli.py  sample-coordinate-normalize-request.json  sample-coordinate-restore-request.json  sample-data.json  sample_input.json  setup_env.sh  test.json  test_bedside_nightstand_slots.py  test_catalog_api_object_type_inference.py  test_cluster_forge_media_anchor_correction.py  test_cluster_output_merge_media_support.py  test_combined_living_kitchen_normalize_run.py  test_compact_bedroom_degradation.py  test_kitchen_dining_compact_footprint.py  test_media_tv_console_contract.py  test_object_solver_face_pair_priority.py  test_seed_concept_pair_contracts.py  test_semantic_layout_planner_media_optional.py  test_tier_count_generous_mode.py  test_tier_count_media_display_contract.py  visualize_result.py
backend/adapters/: catalog_api.py  pydantic_ai_agents.py
backend/agent/: cluster_composer.py  cluster_forge.py  cluster_relation_planner.py  request_contract.py  room_interpreter.py  seed_concept_generator.py  semantic_layout_planner.py  stylist.py  tier_count_director.py  tool_call_parser.py
backend/agent_schema/: clusterF_schema.py  (+3 more)
(+301 files in other folders)
